Notebook changes and ADS updates

--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_02.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_02.ipynb
@@ -33,7 +33,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.0818304"
+                        "text/html": "Total execution time: 00:00:00.0788445"
                     },
                     "metadata": {}
                 },
@@ -47,12 +47,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.4794854"
+                        "text/html": "Total execution time: 00:00:00.8864665"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 6
+            "execution_count": 1
         },
         {
             "cell_type": "code",
@@ -69,12 +69,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.3879082"
+                        "text/html": "Total execution time: 00:00:00.3917940"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 7
+            "execution_count": 2
         },
         {
             "cell_type": "code",
@@ -91,12 +91,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.4509022"
+                        "text/html": "Total execution time: 00:00:00.7815709"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 8
+            "execution_count": 3
         },
         {
             "cell_type": "code",
@@ -104,41 +104,194 @@
             "metadata": {},
             "outputs": [
                 {
-                    "output_type": "error",
-                    "evalue": "Msg 8680, Level 17, State 87, Line 3\r\nInternal Query Processor Error: The query processor encountered an unexpected error during the processing of a remote query phase.",
-                    "ename": "",
-                    "traceback": []
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(10 rows affected)"
+                    },
+                    "metadata": {}
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.2393277"
+                        "text/html": "Total execution time: 00:00:06.1719983"
                     },
                     "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 4,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "CustomerSource"
+                                    },
+                                    {
+                                        "name": "CustomerName"
+                                    },
+                                    {
+                                        "name": "EMailAddress"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "0": "AdventureWorks",
+                                    "1": "Olga Alexandrova",
+                                    "2": "olga@wingtiptoys.com\r"
+                                },
+                                {
+                                    "0": "AdventureWorks",
+                                    "1": "Bibi Javan",
+                                    "2": "bibi@wingtiptoys.com\r"
+                                },
+                                {
+                                    "0": "AdventureWorks",
+                                    "1": "Maris Baltins",
+                                    "2": "maris@wingtiptoys.com\r"
+                                },
+                                {
+                                    "0": "AdventureWorks",
+                                    "1": "Taneli Hahl",
+                                    "2": "taneli@wingtiptoys.com\r"
+                                },
+                                {
+                                    "0": "AdventureWorks",
+                                    "1": "Parsa Reuser",
+                                    "2": "parsa@wingtiptoys.com\r"
+                                },
+                                {
+                                    "0": "AdventureWorks",
+                                    "1": "Da-eun Kwak",
+                                    "2": "da-eun@wingtiptoys.com\r"
+                                },
+                                {
+                                    "0": "AdventureWorks",
+                                    "1": "Duleep Srivastava",
+                                    "2": "duleep@wingtiptoys.com\r"
+                                },
+                                {
+                                    "0": "AdventureWorks",
+                                    "1": "Kurt Balog",
+                                    "2": "kurt@wingtiptoys.com\r"
+                                },
+                                {
+                                    "0": "AdventureWorks",
+                                    "1": "Miran Nikolic",
+                                    "2": "miran@wingtiptoys.com\r"
+                                },
+                                {
+                                    "0": "AdventureWorks",
+                                    "1": "Indra Mudaliyar",
+                                    "2": "indra@wingtiptoys.com\r"
+                                }
+                            ]
+                        },
+                        "text/html": "<table><tr><th>CustomerSource</th><th>CustomerName</th><th>EMailAddress</th></tr><tr><td>AdventureWorks</td><td>Olga Alexandrova</td><td>olga@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Bibi Javan</td><td>bibi@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Maris Baltins</td><td>maris@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Taneli Hahl</td><td>taneli@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Parsa Reuser</td><td>parsa@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Da-eun Kwak</td><td>da-eun@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Duleep Srivastava</td><td>duleep@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Kurt Balog</td><td>kurt@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Miran Nikolic</td><td>miran@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Indra Mudaliyar</td><td>indra@wingtiptoys.com\r</td></tr></table>"
+                    }
                 }
             ],
-            "execution_count": 9
+            "execution_count": 4
         },
         {
             "cell_type": "code",
-            "source": "/* Now Join Those to show customers we currently have in a SQL Server Database \r\nand the Category they qre in the External Table */\r\n\r\nSELECT TOP 10 a.FullName, b.CustomerSource\r\n  FROM [WideWorldImporters].[Application].[People] a\r\n  INNER JOIN [WideWorldImporters].[dbo].[partner_customers_hdfs] b  ON a.EmailAddress = b.EmailAddress;\r\n  GO",
+            "source": "/* Now Join Those to show customers we currently have in a SQL Server Database \r\nand the Category they qre in the External Table */\r\nUSE WideWorldImporters;\r\nGO\r\n\r\nSELECT TOP 10 a.FullName\r\n  , b.CustomerSource\r\n  FROM Application.People a\r\n  INNER JOIN partner_customers_hdfs b  ON a.FullName = b.CustomerName;\r\n  GO",
             "metadata": {},
             "outputs": [
                 {
-                    "output_type": "error",
-                    "evalue": "Msg 8680, Level 17, State 87, Line 4\r\nInternal Query Processor Error: The query processor encountered an unexpected error during the processing of a remote query phase.",
-                    "ename": "",
-                    "traceback": []
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.2139328"
+                        "text/html": "Total execution time: 00:00:00.0798501"
                     },
                     "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(10 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:08.6235983"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 18,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "FullName"
+                                    },
+                                    {
+                                        "name": "CustomerSource"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "0": "Deeptendu Das",
+                                    "1": "AdventureWorks"
+                                },
+                                {
+                                    "0": "Bhaagyalakshmi Rajanala",
+                                    "1": "AdventureWorks"
+                                },
+                                {
+                                    "0": "Rohan Das",
+                                    "1": "AdventureWorks"
+                                },
+                                {
+                                    "0": "Bhaanusree Ankitham",
+                                    "1": "AdventureWorks"
+                                },
+                                {
+                                    "0": "Aamdaal Kamasamudram",
+                                    "1": "AdventureWorks"
+                                },
+                                {
+                                    "0": "Karita Rosberg",
+                                    "1": "AdventureWorks"
+                                },
+                                {
+                                    "0": "Baebeesarasvati Kamasamudram",
+                                    "1": "AdventureWorks"
+                                },
+                                {
+                                    "0": "Hana Palatova",
+                                    "1": "AdventureWorks"
+                                },
+                                {
+                                    "0": "Marcello Dellucci",
+                                    "1": "AdventureWorks"
+                                },
+                                {
+                                    "0": "Shobha Raju",
+                                    "1": "AdventureWorks"
+                                }
+                            ]
+                        },
+                        "text/html": "<table><tr><th>FullName</th><th>CustomerSource</th></tr><tr><td>Deeptendu Das</td><td>AdventureWorks</td></tr><tr><td>Bhaagyalakshmi Rajanala</td><td>AdventureWorks</td></tr><tr><td>Rohan Das</td><td>AdventureWorks</td></tr><tr><td>Bhaanusree Ankitham</td><td>AdventureWorks</td></tr><tr><td>Aamdaal Kamasamudram</td><td>AdventureWorks</td></tr><tr><td>Karita Rosberg</td><td>AdventureWorks</td></tr><tr><td>Baebeesarasvati Kamasamudram</td><td>AdventureWorks</td></tr><tr><td>Hana Palatova</td><td>AdventureWorks</td></tr><tr><td>Marcello Dellucci</td><td>AdventureWorks</td></tr><tr><td>Shobha Raju</td><td>AdventureWorks</td></tr></table>"
+                    }
                 }
             ],
-            "execution_count": 10
+            "execution_count": 18
         },
         {
             "cell_type": "markdown",
