Notebooks update - not complete.

--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_02.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_02.ipynb
@@ -100,7 +100,7 @@
         },
         {
             "cell_type": "code",
-            "source": "/* Read Data from HDFS using only T-SQL */\r\n\r\nSELECT TOP 10 CustomerSource\r\n, CustomerName\r\n, EMailAddress\r\n    FROM [partner_customers_hdfs] hdfs\r\nWHERE EmailAddress LIKE '%wingtip%';\r\nGO\r\n",
+            "source": "/* Read Data from HDFS using only T-SQL */\r\n\r\nSELECT TOP 10 CustomerSource\r\n, CustomerName\r\n, EMailAddress\r\n    FROM [partner_customers_hdfs] hdfs\r\nWHERE EmailAddress LIKE '%wingtip%'\r\nORDER BY CustomerSource, CustomerName;\r\nGO\r\n",
             "metadata": {},
             "outputs": [
                 {
@@ -113,14 +113,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:06.1719983"
+                        "text/html": "Total execution time: 00:00:02.5322630"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 4,
+                    "execution_count": 1,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -139,65 +139,65 @@
                             "data": [
                                 {
                                     "0": "AdventureWorks",
-                                    "1": "Olga Alexandrova",
-                                    "2": "olga@wingtiptoys.com\r"
+                                    "1": "Ã…Å¡ani Nair",
+                                    "2": "Ã¥Å¡ani@wingtiptoys.com\r"
                                 },
                                 {
                                     "0": "AdventureWorks",
-                                    "1": "Bibi Javan",
-                                    "2": "bibi@wingtiptoys.com\r"
+                                    "1": "Ã…Å¡ani Sen",
+                                    "2": "Ã¥Å¡ani@wingtiptoys.com\r"
                                 },
                                 {
                                     "0": "AdventureWorks",
-                                    "1": "Maris Baltins",
-                                    "2": "maris@wingtiptoys.com\r"
+                                    "1": "Aakriti Bhamidipati",
+                                    "2": "aakriti@wingtiptoys.com\r"
                                 },
                                 {
                                     "0": "AdventureWorks",
-                                    "1": "Taneli Hahl",
-                                    "2": "taneli@wingtiptoys.com\r"
+                                    "1": "Aamdaal Kamasamudram",
+                                    "2": "aamdaal@wingtiptoys.com\r"
                                 },
                                 {
                                     "0": "AdventureWorks",
-                                    "1": "Parsa Reuser",
-                                    "2": "parsa@wingtiptoys.com\r"
+                                    "1": "Abel Pirvu",
+                                    "2": "abel@wingtiptoys.com\r"
                                 },
                                 {
                                     "0": "AdventureWorks",
-                                    "1": "Da-eun Kwak",
-                                    "2": "da-eun@wingtiptoys.com\r"
+                                    "1": "Abhaya Rambhatla",
+                                    "2": "abhaya@wingtiptoys.com\r"
                                 },
                                 {
                                     "0": "AdventureWorks",
-                                    "1": "Duleep Srivastava",
-                                    "2": "duleep@wingtiptoys.com\r"
+                                    "1": "Abhra Thakur",
+                                    "2": "abhra@wingtiptoys.com\r"
                                 },
                                 {
                                     "0": "AdventureWorks",
-                                    "1": "Kurt Balog",
-                                    "2": "kurt@wingtiptoys.com\r"
+                                    "1": "Adam Balaz",
+                                    "2": "adam@wingtiptoys.com\r"
                                 },
                                 {
                                     "0": "AdventureWorks",
-                                    "1": "Miran Nikolic",
-                                    "2": "miran@wingtiptoys.com\r"
+                                    "1": "Adirake Narkbunnum",
+                                    "2": "adirake@wingtiptoys.com\r"
                                 },
                                 {
                                     "0": "AdventureWorks",
-                                    "1": "Indra Mudaliyar",
-                                    "2": "indra@wingtiptoys.com\r"
+                                    "1": "Adirake Saenamuang",
+                                    "2": "adirake@wingtiptoys.com\r"
                                 }
                             ]
                         },
-                        "text/html": "<table><tr><th>CustomerSource</th><th>CustomerName</th><th>EMailAddress</th></tr><tr><td>AdventureWorks</td><td>Olga Alexandrova</td><td>olga@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Bibi Javan</td><td>bibi@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Maris Baltins</td><td>maris@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Taneli Hahl</td><td>taneli@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Parsa Reuser</td><td>parsa@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Da-eun Kwak</td><td>da-eun@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Duleep Srivastava</td><td>duleep@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Kurt Balog</td><td>kurt@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Miran Nikolic</td><td>miran@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Indra Mudaliyar</td><td>indra@wingtiptoys.com\r</td></tr></table>"
+                        "text/html": "<table><tr><th>CustomerSource</th><th>CustomerName</th><th>EMailAddress</th></tr><tr><td>AdventureWorks</td><td>Ã…Å¡ani Nair</td><td>Ã¥Å¡ani@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Ã…Å¡ani Sen</td><td>Ã¥Å¡ani@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Aakriti Bhamidipati</td><td>aakriti@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Aamdaal Kamasamudram</td><td>aamdaal@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Abel Pirvu</td><td>abel@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Abhaya Rambhatla</td><td>abhaya@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Abhra Thakur</td><td>abhra@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Adam Balaz</td><td>adam@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Adirake Narkbunnum</td><td>adirake@wingtiptoys.com\r</td></tr><tr><td>AdventureWorks</td><td>Adirake Saenamuang</td><td>adirake@wingtiptoys.com\r</td></tr></table>"
                     }
                 }
             ],
-            "execution_count": 4
+            "execution_count": 1
         },
         {
             "cell_type": "code",
-            "source": "/* Now Join Those to show customers we currently have in a SQL Server Database \r\nand the Category they qre in the External Table */\r\nUSE WideWorldImporters;\r\nGO\r\n\r\nSELECT TOP 10 a.FullName\r\n  , b.CustomerSource\r\n  FROM Application.People a\r\n  INNER JOIN partner_customers_hdfs b  ON a.FullName = b.CustomerName;\r\n  GO",
+            "source": "/* Now Join Those to show customers we currently have in a SQL Server Database \r\nand the Category they qre in the External Table */\r\nUSE WideWorldImporters;\r\nGO\r\n\r\nSELECT TOP 10 a.FullName\r\n  , b.CustomerSource\r\n  FROM Application.People a\r\n  INNER JOIN partner_customers_hdfs b  ON a.FullName = b.CustomerName\r\n  ORDER BY FullName ASC;\r\n  GO",
             "metadata": {},
             "outputs": [
                 {
@@ -210,7 +210,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.0798501"
+                        "text/html": "Total execution time: 00:00:00.0762610"
                     },
                     "metadata": {}
                 },
@@ -224,14 +224,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:08.6235983"
+                        "text/html": "Total execution time: 00:00:02.0456260"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 18,
+                    "execution_count": 2,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -246,19 +246,15 @@
                             },
                             "data": [
                                 {
-                                    "0": "Deeptendu Das",
+                                    "0": "Aahlada Thota",
                                     "1": "AdventureWorks"
                                 },
                                 {
-                                    "0": "Bhaagyalakshmi Rajanala",
+                                    "0": "Aakarsha Nookala",
                                     "1": "AdventureWorks"
                                 },
                                 {
-                                    "0": "Rohan Das",
-                                    "1": "AdventureWorks"
-                                },
-                                {
-                                    "0": "Bhaanusree Ankitham",
+                                    "0": "Aakriti Bhamidipati",
                                     "1": "AdventureWorks"
                                 },
                                 {
@@ -266,32 +262,36 @@
                                     "1": "AdventureWorks"
                                 },
                                 {
-                                    "0": "Karita Rosberg",
+                                    "0": "Abel Pirvu",
                                     "1": "AdventureWorks"
                                 },
                                 {
-                                    "0": "Baebeesarasvati Kamasamudram",
+                                    "0": "Abhaya Rambhatla",
                                     "1": "AdventureWorks"
                                 },
                                 {
-                                    "0": "Hana Palatova",
+                                    "0": "Abhra Thakur",
                                     "1": "AdventureWorks"
                                 },
                                 {
-                                    "0": "Marcello Dellucci",
+                                    "0": "Adam Balaz",
                                     "1": "AdventureWorks"
                                 },
                                 {
-                                    "0": "Shobha Raju",
+                                    "0": "Adam Dvorak",
+                                    "1": "AdventureWorks"
+                                },
+                                {
+                                    "0": "Adam Kubat",
                                     "1": "AdventureWorks"
                                 }
                             ]
                         },
-                        "text/html": "<table><tr><th>FullName</th><th>CustomerSource</th></tr><tr><td>Deeptendu Das</td><td>AdventureWorks</td></tr><tr><td>Bhaagyalakshmi Rajanala</td><td>AdventureWorks</td></tr><tr><td>Rohan Das</td><td>AdventureWorks</td></tr><tr><td>Bhaanusree Ankitham</td><td>AdventureWorks</td></tr><tr><td>Aamdaal Kamasamudram</td><td>AdventureWorks</td></tr><tr><td>Karita Rosberg</td><td>AdventureWorks</td></tr><tr><td>Baebeesarasvati Kamasamudram</td><td>AdventureWorks</td></tr><tr><td>Hana Palatova</td><td>AdventureWorks</td></tr><tr><td>Marcello Dellucci</td><td>AdventureWorks</td></tr><tr><td>Shobha Raju</td><td>AdventureWorks</td></tr></table>"
+                        "text/html": "<table><tr><th>FullName</th><th>CustomerSource</th></tr><tr><td>Aahlada Thota</td><td>AdventureWorks</td></tr><tr><td>Aakarsha Nookala</td><td>AdventureWorks</td></tr><tr><td>Aakriti Bhamidipati</td><td>AdventureWorks</td></tr><tr><td>Aamdaal Kamasamudram</td><td>AdventureWorks</td></tr><tr><td>Abel Pirvu</td><td>AdventureWorks</td></tr><tr><td>Abhaya Rambhatla</td><td>AdventureWorks</td></tr><tr><td>Abhra Thakur</td><td>AdventureWorks</td></tr><tr><td>Adam Balaz</td><td>AdventureWorks</td></tr><tr><td>Adam Dvorak</td><td>AdventureWorks</td></tr><tr><td>Adam Kubat</td><td>AdventureWorks</td></tr></table>"
                     }
                 }
             ],
-            "execution_count": 18
+            "execution_count": 2
         },
         {
             "cell_type": "markdown",
