Updated readme files on how to "start over" in each Module

--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -17,13 +17,13 @@ You'll cover the following topics in this Module:
   
 </dl>
 
+<pre>Note: If at anytime during the Activities of this Module you need to "start over" you can execute the step6_cleanup.sh script. Then you will need to complete all the steps in Module 1 and 2 to redeploy the pod and restore the WideworldImporters database. You do not need to go through the steps in Module 3.</pre>
+
 <p style="border-bottom: 1px solid lightgrey;"></p>
 
 <h2><img style="float: left; margin: 0px 15px 15px 0px;" src="../graphics/pencil2.png"><a name="3-0">4.0 SQL Server High Availability on OpenShift</a></h2>
 
 In this module you will learn how to use the built-in capabilities of OpenShift for high availability for SQL Server.
-
-<pre>Note: This Module assumes you have at minimum, completed Module 01, Deploy SQL Server on OpenShift, and Module 02, Connect and Query.</pre>
 
 OpenShift, which is based on Kubernetes, allows you to deploy a pod and specify a declaration for a number of replicas to be deployed. In previous modules, you deployed a SQL Server container in a single pod on OpenShift. You used a declarative yaml file to instruct OpenShift how to deploy SQL Server with a replica. The fragment of the yaml file looks like
 
