fixed spelling errors

--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -17,7 +17,7 @@ You'll cover the following topics in this Module:
   
 </dl>
 
-<pre>Note: If at anytime during the Activities of this Module you need to "start over" you can execute the step6_cleanup.sh script. Then you will need to complete all the steps in Module 1 and 2 to redeploy the pod and restore the WideworldImporters database. You do not need to go through the steps in Module 3.</pre>
+<pre>Note: If at anytime during the Activities of this Module you need to "start over" you can execute the step6_cleanup.sh script. Then you will need to complete all the steps in Module 1 and 2 to redeploy the pod and restore the WideWorldImporters database. You do not need to go through the steps in Module 3.</pre>
 
 <p style="border-bottom: 1px solid lightgrey;"></p>
 
@@ -36,7 +36,7 @@ spec:
   strategy:
     type: Recreate</pre>
 
-By stating **replicas of 1**, OpenShift will attempt to ensure at least one pod for SQL Server is always running. Since you used  PersistentVolumeClaim for SQL Server databases, your data will always be available even if OpenShift has to start new SQL Server containers. In section 4.1, you will learn the signifance of the **type: Recreate** syntax.
+By stating **replicas of 1**, OpenShift will attempt to ensure at least one pod for SQL Server is always running. Since you used  PersistentVolumeClaim for SQL Server databases, your data will always be available even if OpenShift has to start new SQL Server containers. In section 4.1, you will learn the significance of the **type: Recreate** syntax.
 
 In addition, you created a load balancer service with the following yaml fragment
 
@@ -112,7 +112,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
    (1 rows affected)</pre>
 
-    Depending on how long it takes OpenShift to restart the container, your reconnection make take longer than a few seconds.
+    Depending on how long it takes OpenShift to restart the container, your re-connection make take longer than a few seconds.
 
 5. Since you deployed the SQL Server container in a pod using 1 replica, if there is a failure of the pod in a node, OpenShift will attempt to to create a new pod and schedule it on the appropriate available node. For SQL Server, this is like a *failover* since OpenShift will start a new SQL Server container but pointing to the same PersistentVolumeClaim,  hence the same system and user databases. And the LoadBalancer acts like a *listener* so if the new SQL Server container has a new IP address, the application still connects to the same LoadBalancer IP address.
 
